[package]
name = "lazy-pool"
version = "1.1.0"
authors = ["Giorgos Georgiou <giorgos.georgiou@outlook.com>"]
description = "Experimental lazy object pool"
repository = "https://github.com/behos/lazy-pool"
license = "Apache-2.0"
readme = "./README.md"
edition = "2018"

[dependencies]
log = "~0"

[dev-dependencies]
uuid = { version = "~0", features = ["v4"] }
futures = "0.3"
