[package]
name = "lazy-pool"
version = "2.0.0"
authors = ["Giorgos Georgiou <giorgos.georgiou@outlook.com>"]
description = "Experimental lazy object pool"
repository = "https://github.com/behos/lazy-pool"
license = "Apache-2.0"
readme = "./README.md"
edition = "2024"

[dependencies]
log = "~0"
futures = "0.3"
thiserror = "1.0.43"

[dev-dependencies]
uuid = { version = "~0", features = ["v4"] }
test-log = "0.2.12"
env_logger = "0.10.0"
tokio = { version = "1.29.1", features = ["macros", "rt"] }
futures-timer = "3.0.2"
